# Zenith

./: .gitignore  AGENTS.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260702_0001_create_users_table.py  20260702_0002_create_exercises_tables.py  20260702_0003_create_routines_and_sessions_tables.py  20260702_0004_create_ranks_tables.py  20260703_0005_add_soft_delete_to_routines_sessions.py  20260703_0006_create_refresh_tokens_table.py  20260708_0007_create_ai_suggestions.py  20260708_0008_add_ai_provider_fields.py  20260708_0009_create_ai_training_plans.py  20260708_0010_create_ai_session_summaries.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  exercises.py  health.py  ranks.py  router.py  routines.py  stats.py  users.py
backend/app/application/: ai_coach_question_service.py  ai_coach_service.py  ai_provider.py  ai_session_summary_service.py  ai_training_plan_service.py  auth_service.py  exercise_service.py  rank_service.py  routine_service.py  stats_service.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/domain/: ai.py  exercises.py  ranks.py  routines.py  stats.py  users.py
backend/app/infrastructure/db/: base.py  seed.py  (+1 more)
backend/tests/: conftest.py  test_ai_coach.py  test_ai_coach_questions.py  test_ai_session_summaries.py  test_ai_training_plans.py  test_auth.py  test_config.py  test_exercises.py  test_health.py  test_ranks.py  test_routines.py  test_seed.py  test_stats.py
(+86 files in other folders)
