[project]
name = "gym-routines-api"
version = "0.1.0"
description = "Backend API for gym routine management and AI-assisted progression."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0,<2.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pwdlib[argon2]>=0.2.1,<1.0.0",
    "pyjwt>=2.10.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
